--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,9 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  width: 100vh;
+  display: flex;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  margin: auto;
+}
+
+.App {
+  display: flex;
+  width: 400px;
+  box-shadow: 0px 0px 10px 1px #ccc;
+}
+
+.App form {
+  border-radius: 5px;
+  height: 300px;
+  margin: auto;
 }
